@@ -207,6 +207,9 @@ Changes include:
   RISC OS: send SDL_APPACTIVE events when iconizing the window.
 </P>
 <P>
+  RISC OS: support creating windows with the SDL_NOFRAME flag set.
+</P>
+<P>
   Configuration: fix library detection selecting wrong lib (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=2795">2795</a>.)
 </P>
 <P>
